--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 
 services:
   # Serviço que irá rodar o node
@@ -11,9 +11,10 @@ services:
     restart: always
     # Lista de volumes (diretórios) mapeados de fora para dentro do container
     volumes:
-      # Monta o diretório src, com todos o código do projeto, 
+      # Monta o diretório src, com todos o código do projeto,
       # dentro do diretório /app/src do container
       - ./src:/app/src
+      - ./tests:/app/tests
     # Lista de serviços do qual este serviço depende
     depends_on:
       # Precisa do mongo funcionando antes de subir o node
